[gd_scene load_steps=2 format=3 uid="uid://cxwmoxwjutte8"]

[ext_resource type="Script" uid="uid://g06fyswphp8h" path="res://scripts/enemy_spawner.gd" id="1_ewhtn"]

[node name="EnemySpawner" type="Node2D"]
y_sort_enabled = true
script = ExtResource("1_ewhtn")

[node name="Spawner1" type="Marker2D" parent="."]
y_sort_enabled = true
position = Vector2(72, 148)

[node name="Spawner2" type="Marker2D" parent="."]
y_sort_enabled = true
position = Vector2(253, 224)

[node name="Spawner3" type="Marker2D" parent="."]
y_sort_enabled = true
position = Vector2(-3, 31)

[node name="Timer" type="Timer" parent="."]

[node name="Spawner4" type="Marker2D" parent="."]
y_sort_enabled = true
position = Vector2(19, 327)

[node name="Spawner5" type="Marker2D" parent="."]
y_sort_enabled = true
position = Vector2(367, 322)

[node name="Spawner 6" type="Marker2D" parent="."]
y_sort_enabled = true
position = Vector2(525, 235)
